fixed a bug
fixed a bug where fruits appeared on the snake